--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "tsx --test",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "tsx src/index.ts --watch",
+    "dev": "tsx  --watch src/index.ts",
     "lint": "eslint",
     "format": "npx prettier . --write"
   },
