--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,8 @@
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.8.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
