--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tsx --test",
+    "test": "tsx --test src/**/*.test.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx  --watch src/index.ts",
